// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomepageBlock should render with the children and default link 1`] = `
<div
  className="c-homepage__block-link c-homepage__block c-homepage__block--tall "
  onKeyDown={[Function]}
  tabIndex="0"
>
  <div>
    <span>
      This is a child of the homepageblock
    </span>
  </div>
  <Connect(Link)
    className="c-homepage__block-button "
    tabIndex="-1"
    title="Bekijk test block"
    to={
      Object {
        "type": "foo",
      }
    }
  >
    <div
      className="o-btn--transparent"
    >
      test block
    </div>
    <div
      className="c-homepage__block-details"
    >
      click here for the test link in the block
    </div>
  </Connect(Link)>
</div>
`;

exports[`HomepageBlock should render with the default link 1`] = `
<div
  className="c-homepage__block-link c-homepage__block c-homepage__block--tall "
  onKeyDown={[Function]}
  tabIndex="0"
>
  <Connect(Link)
    className="c-homepage__block-button "
    tabIndex="-1"
    title="Bekijk test block"
    to={
      Object {
        "type": "foo",
      }
    }
  >
    <div
      className="o-btn--transparent"
    >
      test block
    </div>
    <div
      className="c-homepage__block-details"
    >
      click here for the test link in the block
    </div>
  </Connect(Link)>
</div>
`;
